# pokeheartgold

./: .gitignore  Makefile  global.inc  main.lsf  meson.build  out.txt  replace.txt
asm/: _unk_02054648.s  battle_setup.s  field_take_photo.s  meson.build  overlay_01_021E5900.s  overlay_01_021E6880.s  overlay_01_021EB1E8.s  overlay_01_021FC05C.s  overlay_02.s  overlay_04.s  overlay_12_battle_controller.s  overlay_27.s  overlay_40.s  overlay_80_02229EE0.s  overlay_80_0222BDF4.s  overlay_80_0222F608.s  overlay_80_0222FD08.s  overlay_80_02230B8C.s  overlay_80_02231BF8.s  overlay_80_022324C4.s  overlay_80_02233688.s  overlay_80_022340E8.s  overlay_80_02235390.s  overlay_80_02235438.s  overlay_80_02235900.s  overlay_80_02235FC8.s  overlay_80_02236B78.s  overlay_80_02238034.s  overlay_80_02238648.s  unk_0202FBCC.s  unk_0203E348.s  unk_020551B8.s  unk_02055244.s  unk_020557E0.s  unk_02058034.s  unk_0206793C.s  unk_0206B910.s  unk_02078834.s  unk_020910D8.s  unk_020965A4.s  (+3 more)
asm/include/: overlay_01_021E5900.inc  overlay_01_021EB1E8.inc  overlay_01_021FC05C.inc  overlay_04.inc
files/: meson.build
files/application/: meson.build
files/application/annon/: meson.build
files/application/annon/puzzle_gra/: meson.build
files/application/choose_starter/: meson.build
files/application/choose_starter/choose_starter_main_res/: meson.build
files/application/choose_starter/choose_starter_sub_res/: meson.build
files/application/guinness/: meson.build
files/application/pokegear/: meson.build
files/application/pokegear/configure/: meson.build
files/application/pokegear/configure/pgconf_gra/: meson.build
files/application/pokegear/map/: meson.build
files/application/pokegear/map/pgmap_gra/: meson.build
files/application/pokegear/pgear_gra/: meson.build
files/application/pokegear/phone/: meson.build
files/application/pokegear/phone/pgphone_gra/: meson.build
files/application/pokegear/radio/: meson.build
files/application/pokegear/radio/pgradio_gra/: meson.build
files/application/record/: meson.build
files/application/record/record/: meson.build
files/application/voltorb_flip/: meson.build
files/arc/: meson.build
files/graphic/: meson.build
files/graphic/camera_viewfinder/: .knarcignore  meson.build
files/graphic/plist_gra/: meson.build
files/msgdata/: meson.build
files/msgdata/msg/: meson.build
heartgold.us/: meson.build
include/: battle_arcade_game_board.h  battle_controller.h  battle_setup.h  camera.h  dwcaccount.h  field_system.h  frontier_command_battle_arcade.h  frontier_system.h  global.h  overlay_01.h  overlay_01_021EB1E8.h  overlay_01_02203E40.h  overlay_02.h  overlay_80.h  overlay_80_0222A84C.h  overlay_80_0222AB40.h  overlay_80_0222BDF4.h  overlay_80_02238034.h  overlay_80_02238648.h  overlay_80_02239960.h  palette.h  particle_system.h  unk_02020B8C.h  unk_0202C034.h  unk_02037C94.h  unk_020551B8.h  unk_02055244.h  unk_020552A4.h
include/constants/: pokemon.h  weather.h
include/field/: fog.h  weather_manager.h
lib/: meson.build
lib/MSL_C/: meson.build
meson/: cross.ini  cross_unix.ini
src/: battle_arcade_game_board.c  battle_controller.c  camera.c  encounter.c  field_black_out.c  field_take_photo.c  field_warp_tasks.c  frontier_command_battle_arcade.c  game_clear.c  get_egg.c  meson.build  scrcmd_c.c  unk_02055BF0.c  unk_02097720.c
src/field/: fog.c  weather_manager.c
src/voltorb_flip/: voltorb_flip_input.c
subprojects/: .gitignore
subprojects/metroskrew/share/metroskrew/sdk/ds/1.2/base/: lib.txt  mwccarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/1.2/base_b73/: lib.txt  mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/1.2/sp2/: lib.txt  mwccarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/1.2/sp2p3/: mwasmarm.exe.txt  mwccarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/1.2/sp3/: lib.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/1.2/sp3p2/: mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/1.2/sp4/: lib.txt  mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/1.2/sp4p1/: mwasmarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/2.0/base/: lib.txt  mwccarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/2.0/p2/: lib.txt  mwccarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/2.0/p4/: lib.txt  mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/2.0/sp1/: lib.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/2.0/sp1p1/: mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/2.0/sp1p2/: lib.txt  mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/2.0/sp1p5/: mwccarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/2.0/sp1p6/: mwccarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/2.0/sp1p7/: mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/ds/2.0/sp2/: lib.txt  mwasmarm.exe.txt  mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/dsi/1.1/: lib.txt  mwccarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/dsi/1.1p1/: lib.txt  mwasmarm.exe.txt  mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/dsi/1.2/: mwccarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/dsi/1.2p1/: mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/dsi/1.2p2/: lib.txt  mwccarm.exe.txt  mwldarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/dsi/1.3/: lib.txt  mwasmarm.exe.txt  mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/dsi/1.3p1/: mwccarm.exe.txt
subprojects/metroskrew/share/metroskrew/sdk/dsi/1.6sp1/: lib.txt
subprojects/metroskrew/share/metroskrew/sdk/dsi/1.6sp2/: mwccarm.exe.txt
tools/: meson.build
tools/jsonproc/: meson.build
tools/knarc/: meson.build
tools/msgenc/: meson.build
tools/nitrogfx/: main.c  meson.build
tools/o2narc/: meson.build
(+8 files in other folders)
