project('pokeheartgold', ['c', 'cpp'],
    version: '1.0',
    meson_version: '>=1.5.0',
    default_options : [
        'buildtype=plain',
        'warning_level=0'
    ]
)

fs = import('fs')

############################################################
###                         TOOLS                        ###
############################################################
subdir('tools')

############################################################
###                         FILES                        ###
############################################################
subdir('files')

