pokeheartgold_asm = files(
    'battle_arcade_game_board_data.s',
    'frontier.s',
    'frontier_map.s',
    'middleware.s',
    'nitrocrypto.s',
    'overlay_00_thumb.s',
    'overlay_01_021E7FDC.s',
    'overlay_01_021E90C0.s',
    'overlay_01_021E5900.s',
    'overlay_01_021E6880.s',
    'overlay_01_021E8744.s',
    'overlay_01_021EA6C4.s',
    'overlay_01_021EA8E0.s',
    'overlay_01_021EABA8.s',
    'overlay_01_021EAF00.s',
    'overlay_01_021EAFD4.s',
    'overlay_01_021EB1E8.s',
    'overlay_01_021EDAFC.s',
    'overlay_01_021EFB38.s',
    'overlay_01_021F1AFC.s',
    'overlay_01_021F3D38.s',
    'overlay_01_021F3F50.s',
    'overlay_01_021F6CFC.s',
    'overlay_01_021F8D80.s',
    'overlay_01_021F72DC.s',
    'overlay_01_021F467C.s',
    'overlay_01_021F944C.s',
    'overlay_01_021F1348.s',
    'overlay_01_021F3114.s',
    'overlay_01_021F3378.s',
    'overlay_01_021F3610.s',
    'overlay_01_021F4464.s',
    'overlay_01_021F4704.s',
    'overlay_01_021F6830.s',
    'overlay_01_021FAC44.s',
    'overlay_01_021FAD1C.s',
    'overlay_01_021FB04C.s',
    'overlay_01_021FB4C0.s',
    'overlay_01_021FB5D4.s',
    'overlay_01_021FB368.s',
    'overlay_01_021FB878.s',
    'overlay_01_021FC4C4.s',
    'overlay_01_021FC05C.s',
    'overlay_01_021FC66C.s',
    'overlay_01_021FCD2C.s',
    'overlay_01_021FCE98.s',
    'overlay_01_021FD1B8.s',
    'overlay_01_021FD41C.s',
    'overlay_01_021FDA14.s',
    'overlay_01_021FE200.s',
    'overlay_01_021FE590.s',
    'overlay_01_021FE780.s',
    'overlay_01_021FEA0C.s',
    'overlay_01_021FEC38.s',
    'overlay_01_021FED9C.s',
    'overlay_01_021FEEEC.s',
    'overlay_01_021FF6B0.s',
    'overlay_01_021FF464.s',
    'overlay_01_021FF854.s',
    'overlay_01_021FFC0C.s',
    'overlay_01_02203A18.s',
    'overlay_01_02203E40.s',
    'overlay_01_022001E4.s',
    'overlay_01_022006A8.s',
    'overlay_01_022031C0.s',
    'overlay_01_022051EC.s',
    'overlay_01_022053EC.s',
    'overlay_01_02200040.s',
    'overlay_01_02200858.s',
    'overlay_01_02204004.s',
    'overlay_01_data_02208BFC.s',
    'overlay_01_sprite_data.s',
    'overlay_02_02245B80.s',
    'overlay_03.s',
    'overlay_04.s',
    'overlay_05.s',
    'overlay_07.s',
    'overlay_08.s',
    'overlay_10_trainer_ai.s',
    'overlay_12_0226ADE0.s',
    'overlay_12_0226B8FC.s',
    'overlay_12_0226BBC4.s',
    'overlay_12_0226BEC4.s',
    'overlay_12_02265E28.s',
    'overlay_12_022378C0.s',
    'overlay_12_battle_command.s',
    'overlay_12_battle_controller.s',
    'overlay_12_battle_controller_opponent.s',
    'overlay_13_thumb_1.s',
    'overlay_13_thumb_2.s',
    'overlay_14.s',
    'overlay_15.s',
    'overlay_18.s',
    'overlay_27.s',
    'overlay_28.s',
    'overlay_29.s',
    'overlay_31.s',
    'overlay_32.s',
    'overlay_33.s',
    'overlay_34.s',
    'overlay_35.s',
    'overlay_37.s',
    'overlay_38_thumb.s',
    'overlay_39_thumb.s',
    'overlay_40.s',
    'overlay_41.s',
    'overlay_42.s',
    'overlay_43.s',
    'overlay_44.s',
    'overlay_45_thumb.s',
    'overlay_46.s',
    'overlay_47.s',
    'overlay_48.s',
    'overlay_49.s',
    'overlay_56.s',
    'overlay_57.s',
    'overlay_58.s',
    'overlay_59.s',
    'overlay_64.s',
    'overlay_65.s',
    'overlay_67.s',
    'overlay_68.s',
    'overlay_69.s',
    'overlay_70.s',
    'overlay_71.s',
    'overlay_72.s',
    'overlay_73.s',
    'overlay_74_thumb.s',
    'overlay_75.s',
    'overlay_80_0222ACA0.s',
    'overlay_80_0222AEF8.s',
    'overlay_80_0222BDF4.s',
    'overlay_80_0222F608.s',
    'overlay_80_0222FD08.s',
    'overlay_80_0223A00C.s',
    'overlay_80_0223AC24.s',
    'overlay_80_02229EE0.s',
    'overlay_80_02230B8C.s',
    'overlay_80_02231BF8.s',
    'overlay_80_02235FC8.s',
    'overlay_80_02236B78.s',
    'overlay_80_02237A70.s',
    'overlay_80_02239AF8.s',
    'overlay_80_02239BF0.s',
    'overlay_80_02239D74.s',
    'overlay_80_022310C4.s',
    'overlay_80_022324C4.s',
    'overlay_80_022340E8.s',
    'overlay_80_022357B4.s',
    'overlay_80_022372D8.s',
    'overlay_80_022384D8.s',
    'overlay_80_02235390.s',
    'overlay_80_02235438.s',
    'overlay_80_02235900.s',
    'overlay_80_02236450.s',
    'overlay_80_02238034.s',
    'overlay_80_02239960.s',
    'overlay_81.s',
    'overlay_82.s',
    'overlay_83.s',
    'overlay_85.s',
    'overlay_86.s',
    'overlay_87.s',
    'overlay_88.s',
    'overlay_89.s',
    'overlay_90.s',
    'overlay_91.s',
    'overlay_92.s',
    'overlay_93_arm.s',
    'overlay_93_thumb_1.s',
    'overlay_93_thumb_2.s',
    'overlay_95.s',
    'overlay_96.s',
    'overlay_97.s',
    'overlay_98.s',
    'overlay_99.s',
    'overlay_102.s',
    'overlay_103.s',
    'overlay_104.s',
    'overlay_105.s',
    'overlay_106.s',
    'overlay_108.s',
    'overlay_108_021E8850.s',
    'overlay_109.s',
    'overlay_111.s',
    'overlay_112.s',
    'overlay_113.s',
    'overlay_114.s',
    'overlay_115.s',
    'overlay_116.s',
    'overlay_117.s',
    'overlay_118.s',
    'overlay_119.s',
    'overlay_120.s',
    'overlay_trainer_card_main.s',
    'overlay_trainer_card_signature.s',
    'render_window.s',
    'text_0205B4EC.s',
    'unk_0200B150.s',
    'unk_0200FA24.s',
    'unk_0201F990.s',
    'unk_0202B614.s',
    'unk_0202C034.s',
    'unk_0202C730.s',
    'unk_0202D230.s',
    'unk_0202DB34.s',
    'unk_0202E41C.s',
    'unk_0202FBCC.s',
    'unk_0203A3B0.s',
    'unk_0203BA5C.s',
    'unk_0203DB6C.s',
    'unk_0205A44C.s',
    'unk_0205AC88.s',
    'unk_0205BB1C.s',
    'unk_0205BFF0.s',
    'unk_0205CB48.s',
    'unk_0205FD20.s',
    'unk_0208B1AC.s',
    'unk_0208C3E4.s',
    'unk_0208DE40.s',
    'unk_0208F658.s',
    'unk_0208F814.s',
    'unk_0208FB64.s',
    'unk_02004A44.s',
    'unk_02005D10.s',
    'unk_02012DD8.s',
    'unk_02014A08.s',
    'unk_02014DA0.s',
    'unk_02015DD8.s',
    'unk_02016EDC.s',
    'unk_02017FAC.s',
    'unk_02020B8C.s',
    'unk_02025C44.s',
    'unk_02026DE0.s',
    'unk_02030A98.s',
    'unk_02031B0C.s',
    'unk_02033AE0.s',
    'unk_02034B0C.s',
    'unk_02037C94.s',
    'unk_02054E00.s',
    'unk_02055BF0_data.s',
    'unk_02056D7C.s',
    'unk_02058AEC.s',
    'unk_02066EDC.s',
    'unk_02067A60.s',
    'unk_02068FC8.s',
    'unk_02074E5C.s',
    'unk_02078DD8.s',
    'unk_02087A78.s',
    'unk_02087E70.s',
    'unk_02087FD4.s',
    'unk_02092B04.s',
    'unk_02092BB8.s',
    'unk_02095DF4.s',
    'unk_02096C88.s',
    'unk_02097B78.s',
    'unk_02097BE0.s',
    'unk_020163E0.s',
    'unk_020192D0.s',
    'unk_020210A0.s',
    'unk_020318C8.s',
    'unk_020379A0.s',
    'unk_020517A4.s',
    'unk_020551B8.s',
    'unk_020632B0.s',
    'unk_020658D4.s',
    'unk_020689C8.s',
    'unk_020755E8.s',
    'unk_020773AC.s',
    'unk_020850F4.s',
    'unk_020863F4.s',
    'unk_020915B0.s',
    'unk_020932E0.s',
    'unk_020957B0.s',
    'unk_020961D8.s',
    'unk_020971F8.s',
    'unk_020977CC.s',
    'unk_020979A8.s',
    'unk_0201010C.s',
    'unk_0201956C.s',
    'unk_0202068C.s',
    'unk_0206793C.s',
    'unk_0206979C.s',
    'unk_02013534.s',
    'unk_02018000.s',
    'unk_02023694.s',
    'unk_02027010.s',
    'unk_02031904.s',
    'unk_02032844.s',
    'unk_02034354.s',
    'unk_02035900.s',
    'unk_02054514.s',
    'unk_02054648.s',
    'unk_02055244.s',
    'unk_02056680.s',
    'unk_02058034.s',
    'unk_02061284.s',
    'unk_02062108.s',
    'unk_02069660.s',
    'unk_02077678.s',
    'unk_02078834.s',
    'unk_02085604.s',
    'unk_02087284.s',
    'unk_02088288.s',
    'unk_02091880.s',
    'unk_02096910.s',
    'unk_02097024.s',
    'unk_02097268.s',
    'unk_data_020FCBD8.s',
    'unk_data_020FD978.s',
    'unk_data_020FDB44.s',
)