lib_asm_includes = [
    include_directories('asm/include'),
    include_directories('NitroDWC/asm/include'),
    include_directories('NitroSDK/asm/include'),
    include_directories('syscall/asm/include'),
]

lib_includes = include_directories('include', 'syscall')

#subdir('MSL_C')
#subdir('NitroDWC')
#subdir('NitroSDK')
#subdir('syscall')

