pokeheartgold_c = files(
    'alph_checks.c',
    'alph_puzzle.c',
    'apricorn_tree_sys.c',
    'ascii_util.c',
    'bag.c',
    'bag_view.c',
    'battle_arcade_game_board.c',
    'battle_regulations.c',
    'berry_pots_app.c',
    'berry_pots_app_tasks.c',
    'bg_window.c',
    'blackout.c',
    'brightness.c',
    'camera.c',
    'camera_translation.c',
    'catching_show.c',
    'certificates_app.c',
    'choose_starter.c',
    'choose_starter_app.c',
    'coins.c',
    'communication_error.c',
    'daycare.c',
    'dex_mon_measures.c',
    'easy_chat.c',
    'encounter.c',
    'error_handling.c',
    'error_message_reset.c',
    'field_move.c',
    'field_move_environment.c',
    'field_roamer.c',
    'field_system.c',
    'field_system_rtc_weather.c',
    'field_take_photo.c',
    'field_use_item.c',
    'field_warp_tasks.c',
    'fieldmap.c',
    'filesystem.c',
    'follow_mon.c',
    'font.c',
    'font_data.c',
    'game_clear.c',
    'game_stats.c',
    'get_egg.c',
    'gf_3d_render.c',
    'gf_3d_vramman.c',
    'gf_gfx_loader.c',
    'gf_gfx_planes.c',
    'gf_rtc.c',
    'gymmick_init.c',
    'hall_of_fame.c',
    'hatch_egg_task.c',
    'heap.c',
    'igt.c',
    'intro_movie.c',
    'intro_movie_scene_1.c',
    'intro_movie_scene_2.c',
    'intro_movie_scene_3.c',
    'intro_movie_scene_4.c',
    'intro_movie_scene_5.c',
    'intro_movie_scene_lib.c',
    'item.c',
    'launch_application.c',
    'link_ruleset_data.c',
    'list_menu.c',
    'list_menu_2d.c',
    'list_menu_items.c',
    'location_backup.c',
    'location_gmm_dat.c',
    'mail.c',
    'mail_message.c',
    'mail_misc.c',
    'main.c',
    'map_events.c',
    'map_header.c',
    'map_matrix.c',
    'map_object.c',
    'map_preview_graphic.c',
    'math_util.c',
    'menu_input_state.c',
    'message_format.c',
    'message_printer.c',
    'metatile_behavior.c',
    'mom_gift.c',
    'move.c',
    'move_relearner.c',
    'msgdata.c',
    'mystery_gift.c',
    'naming_screen.c',
    'npc_trade.c',
    'oaks_speech.c',
    'oaks_speech_obj.c',
    'oaks_speech_yesnomenu.c',
    'obj_chat_transfer.c',
    'obj_pltt_transfer.c',
    'options.c',
    'options_app.c',
    'overlay_02_02251E74.c',
    'overlay_06.c',
    'overlay_16_022014A0.c',
    'overlay_16_02201948.c',
    'overlay_22.c',
    'overlay_25.c',
    'overlay_26_022598C0.c',
    'overlay_26_022599D0.c',
    'overlay_36.c',
    'overlay_55.c',
    'overlay_94.c',
    'overlay_124.c',
    'overlay_bug_contest.c',
    'overlay_manager.c',
    'overlay_mic_test.c',
    'overlay_trainer_card.c',
    'palette.c',
    'palPark_migration.c',
    'party.c',
    'party_context_menu.c',
    'party_menu.c',
    'party_menu_items.c',
    'party_menu_list_items.c',
    'party_menu_sprites.c',
    'phonebook_dat.c',
    'photo_album.c',
    'player_avatar.c',
    'player_data.c',
    'pm_string.c',
    'pm_version.c',
    'poke_overlay.c',
    'pokedex.c',
    'pokedex_util.c',
    'pokemon.c',
    'pokemon_icon_idx.c',
    'pokemon_mood.c',
    'pokemon_storage_system.c',
    'pokepic.c',
    'pokewalker.c',
    'register_hall_of_fame.c',
    'render_text.c',
    'ribbon.c',
    'roamer.c',
    'safari_zone.c',
    'sav_chatot.c',
    'sav_system_info.c',
    'save.c',
    'save_arrays.c',
    'save_data_read_error.c',
    'save_data_write_error.c',
    'save_follow_mon.c',
    'save_gymmick.c',
    'save_link_ruleset.c',
    'save_local_field_data.c',
    'save_misc.c',
    'save_palpad.c',
    'save_pokegear.c',
    'save_rankings.c',
    'save_special_ribbons.c',
    'save_trainer_card.c',
    'save_trainer_house.c',
    'save_vars_flags.c',
    'save_wifi_history.c',
    'srccmd_8.c',
    'srccmd_9.c,
    'srccmd_12.c,
    'srccmd_17.c,
    'srccmd_20.c,
    'srccmd_apricorn.c,
    'srccmd_battle.c,
    'srccmd_battle_arcade.c,
    'srccmd_battle_c.c,
    'srccmd_battle_daycare.c,
    'srccmd_battle_dppl_prizes.c,
    'srccmd_battle_fossils.c,
    'srccmd_battle_items.c,
    'srccmd_battle_lottery.c,
    'srccmd_battle_mart.c,
    'srccmd_battle_money.c,
    'srccmd_battle_move_relearner.c,
    'srccmd_battle_move_tutor.c,
    'srccmd_battle_mystery_gift.c,
    'srccmd_battle_party.c,
    'srccmd_battle_size_record.c,
    'srccmd_battle_sound.c,
    'srccmd_battle_strbuf.c,
    'script.c',
    'script_pokemon_util.c',
    'seal_case.c',
    'sin_vcount.c',
    'sound.c',
    'sound_chatot.c',
    'sound_radio_sys.c',
    'sprite.c',
    'sprite_system.c',
    'start_menu.c',
    'string_control_code.c',
    'string_util.c',
    'sys_flags.c',
    'sys_task.c',
    'sys_task_api.c',
    'sys_vars.c',
    'systask_environment.c',
    'system.c',
    'task.c',
    'text.c',
    'timer3.c',
    'title_screen.c',
    'touch_hitbox_controller.c',
    'touch_save_app.c',
    'touchscreen.c',
    'touchscreen_list_menu.c',
    'trainer_data.c',
    'trainer_memo.c',
    'unk_0200A090.c',
    'unk_0200ACF0.c',
    'unk_0200CE7C.c',
    'unk_0202F370.c',
    'unk_0203AC88.c',
    'unk_0204A3F4.c',
    'unk_0204B538.c',
    'unk_0205B3DC.c',
    'unk_0206B910.c',
    'unk_0206D494.c',
    'unk_02009D48.c',
    'unk_02013FDC.c',
    'unk_02019BA4.c',
    'unk_02020A0C.c',
    'unk_02026E30.c',
    'unk_02026E84.c',
    'unk_02031AF0.c',
    'unk_02055BF0.c',
    'unk_02068F84.c',
    'unk_02092BE8.c',
    'unk_02097D3C.c',
    'unk_02097F6C.c',
    'unk_020648EC.c',
    'unk_020912AC.c',
    'unk_020932A4.c',
    'unk_0203170C.c',
    'unk_0208805C.c',
    'unk_02018380.c',
    'unk_02025534.c',
    'unk_02055418.c',
    'unk_02069528.c',
    'unk_02091054.c',
    'unk_02091278.c',
    'unk_02097720.c',
    'update_dex_received.c',
    'use_item_on_mon.c',
    'vram_transfer_manager.c',
    'wfc_user_info_warning.c',
    'yes_no_prompt.c',
    ##############################
    ###      APPLICATIONS      ###
    ##############################
    'application/check_savedata.c',
    'application/delete_savedata.c',
    'application/view_photo.c',
    'application/view_rankings.c',
    'application/main_menu/main_menu.c',
        ##############################
        ###        POKEDEX         ###
        ##############################
        'application/pokedex/ov18_021E5AA0.c',
        'application/pokedex/ov18_021E5C40.c',
        'application/pokedex/ov18_021E8BF4.c',
        'application/pokedex/ov18_021E590C.c',
        ##############################
        ###        POKEGEAR        ###
        ##############################
            ##############################
            ###       CONFIGURE        ###
            ##############################
            'application/pokegear/configure/overlay_101_021EED44.c',
            'application/pokegear/configure/overlay_101_021EF1D8.c',
            'application/pokegear/configure/overlay_101_021EF6D0.c',
            'application/pokegear/configure/pokegear_configure.c',
            ##############################
            ###          MAIN          ###
            ##############################
            'application/pokegear/main/overlay_100_021E5900.c',
            'application/pokegear/main/overlay_100_021E6914.c',
            'application/pokegear/main/pokegear_cursor.c',
            'application/pokegear/main/pokegear_main.c',
            ##############################
            ###          MAP           ###
            ##############################
            'application/pokegear/map/fly_map.c',
            'application/pokegear/map/overlay_101_021E7FF4.c',
            'application/pokegear/map/overlay_101_021E9270.c',
            'application/pokegear/map/overlay_101_021EB568.c',
            'application/pokegear/map/overlay_101_021ED498.c',
            'application/pokegear/map/overlay_101_021EDCE0.c',
            'application/pokegear/map/overlay_101_021F79B4.c',
            'application/pokegear/map/pokegear_map.c',
            ##############################
            ###         PHONE          ###
            ##############################
            'application/pokegear/phone/extra_ethan_lyra_data.c',
            'application/pokegear/phone/overlay_101_021EFD20.c',
            'application/pokegear/phone/overlay_101_021F0F48.c',
            'application/pokegear/phone/overlay_101_021F1D74.c',
            'application/pokegear/phone/overlay_101_021F017C.c',
            'application/pokegear/phone/overlay_101_021F0880.c',
            'application/pokegear/phone/phone_generic_headers.c',
            'application/pokegear/phone/phone_script_defs.c',
            'application/pokegear/phone/pokegear_phone.c',
            'application/pokegear/phone/scripts/phone_scripts_baoba.c',
            'application/pokegear/phone/scripts/phone_scripts_bike_shop.c',
            'application/pokegear/phone/scripts/phone_scripts_bill.c',
            'application/pokegear/phone/scripts/phone_scripts_blackbelt_kenji.c',
            'application/pokegear/phone/scripts/phone_scripts_buena.c',
            'application/pokegear/phone/scripts/phone_scripts_childhood_friend.c',
            'application/pokegear/phone/scripts/phone_scripts_daycare_lady.c',
            'application/pokegear/phone/scripts/phone_scripts_daycare_man.c',
            'application/pokegear/phone/scripts/phone_scripts_generic.c',
            'application/pokegear/phone/scripts/phone_scripts_gym_leader.c',
            'application/pokegear/phone/scripts/phone_scripts_juggler_irwin.c',
            'application/pokegear/phone/scripts/phone_scripts_kurt.c',
            'application/pokegear/phone/scripts/phone_scripts_mother.c',
            'application/pokegear/phone/scripts/phone_scripts_prof_elm.c',
            'application/pokegear/phone/scripts/phone_scripts_prof_oak.c',
            ##############################
            ###         RADIO          ###
            ##############################
            'application/pokegear/radio/overlay_101_021F4F34.c',
            'application/pokegear/radio/overlay_101_021F49F8.c',
            'application/pokegear/radio/overlay_101_021F57B8.c',
            'application/pokegear/radio/pokegear_radio.c',
            'application/pokegear/radio/shows/buenas_password.c',
            'application/pokegear/radio/shows/commercials.c',
            'application/pokegear/radio/shows/mahogany_signal.c',
            'application/pokegear/radio/shows/poke_flute.c',
            'application/pokegear/radio/shows/pokemon_music.c',
            'application/pokegear/radio/shows/pokemon_search_party.c',
            'application/pokegear/radio/shows/pokemon_talk.c',
            'application/pokegear/radio/shows/serial_radio_drama.c',
            'application/pokegear/radio/shows/team_rocket.c',
            'application/pokegear/radio/shows/that_town_these_people.c',
            'application/pokegear/radio/shows/trainer_profiles.c',
            'application/pokegear/radio/shows/unown.c',
    ##############################
    ###         BATTLE         ###
    ##############################
    'battle/battle_02261FD4.c',
    'battle/battle_022378C0.c',
    'battle/battle_command.c',
    'battle/battle_controller_player.c',
    'battle/battle_cursor.c',
    'battle/battle_finger.c',
    'battle/battle_hp_bar.c',
    'battle/battle_hp_bar_data.c',
    'battle/battle_input.c',
    'battle/battle_setup.c',
    'battle/battle_system.c',
    'battle/overlay_12_0224E4FC.c',
    'battle/overlay_12_0226BEC4.c',
    'battle/trainer_ai.c',
    ##############################
    ###        CREDITS         ###
    ##############################
    'credits/credits.c',
    'credits/data1.c',
    'credits/data2.c',
    ##############################
    ###         FIELD          ###
    ##############################
    'field/draw_map_name.c',
    'field/event_cutscene_celebi.c',
    'field/event_cutscene_shaymin.c',
    'field/event_cutscene_sinjoh.c',
    'field/headbutt.c',
    'field/legend_cutscene_camera.c',
    'field/overlay_01_021E66E4.c',
    'field/overlay_01_021FFECC.c',
    'field/overlay_01_apricorn_tree_anim.c',
    'field/overlay_01_rock_smash_item.c',
    'field/overlay_2_gear_phone.c',
    'field/scrcmd_message.c',
    'field/scrcmd_moneybox.c',
    'field/scrcmd_pokemon_misc.c',
    ##############################
    ###        FRONTIER        ###
    ##############################
    'frontier/frontier_cmd_arcade.c',
    'frontier/frontier_script_context.c',
    ##############################
    ###       POKEATHLON       ###
    ##############################
    'pokeathlon/pokeathlon_course.c',
    ##############################
    ###        POKETOOL        ###
    ##############################
    'poketool/pokefoot.c',
    ##############################
    ###  o o VOLTORB FLIP o o  ###
    ##############################
    'voltorb_flip/voltorb_flip.c',
    'voltorb_flip/voltorb_flip_game.c',
    'voltorb_flip/voltorb_flip_input.c',
    'voltorb_flip/voltorb_flip_tasks.c',
)