msgenc_exe = executable('msgenc',
    sources : [
        'msgenc.cpp',
        'Options.cpp',
        'MessagesConverter.cpp',
        'MessagesDecoder.cpp',
        'MessagesEncoder.cpp',
        'Gmm.cpp',
        'pugixml.cpp',
    ],
    cpp_args : [
        '-std=c++17',
        '-O2',
        '-Wall',
        '-Wno-switch',
        '-Wno-unused-but-set-variable',
    ],
    native : true
)